# drf-template

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  ruff.toml
auth-service/: DockerFile  pyproject.toml
auth-service/config/development/: .env.example
auth-service/src/: manage.py
auth-service/src/config/: urls.py  utils.py
auth-service/src/config/settings/: base.py  development.py
auth-service/src/users/: admin.py  serializers.py  signals.py  urls.py  views.py
auth-service/src/users/migrations/: 0001_initial.py
infra/redis/: redis.conf
