[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Authorization Service"
authors = ["Gabriel Castellanos <gabi.marante@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.2.6,<6.0.0"
pyyaml = ">=6.0.2,<7.0.0"
markdown = ">=3.9,<4.0"
pygments = ">=2.19.2,<3.0.0"
django-filter = ">=25.1,<26.0"
djangorestframework = ">=3.16.1,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg = "^3.2.10"
psycopg2-binary = "^2.9.10"
django-redis = "^6.0.0"
redis = "^6.4.0"
drf-extensions = "^0.8.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.0"
pytest = "^7.0.0"
pytest-django = "^4.5.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
